force-app/main/default/objects/Open_Positions__c/Open_Positions__c.object-meta.xml
<CustomObject>
    <label>Open Positions</label>
    <nameField>
        <label>Open Positions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>