force-app/main/default/objects/Open_Positions__c/fields/Date_Position_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Position_closed__c</fullName>
    <label>Date Position closed</label>
    <type>Date</type>
</CustomField>