force-app/main/default/objects/Open_Positions__c/fields/Date_Position_opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Position_opened__c</fullName>
    <label>Date Position opened</label>
    <type>Date</type>
</CustomField>