force-app/main/default/objects/Open_Positions__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <type>TextArea</type>
</CustomField>