force-app/main/default/objects/Open_Positions__c/fields/Number_of_applicants_1st_Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_applicants_1st_Interviewed__c</fullName>
    <label>Number of applicants 1st Interviewed</label>
    <summaryFilterItems>
        <field>Applicant_Tracking__c.Application_Status__c</field>
        <operation>equals</operation>
        <value>1st interview scheduled, 1st Interview complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Applicant_Tracking__c.Position_Applied_for__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>