force-app/main/default/objects/Open_Positions__c/fields/Position_pay_range__c.field-meta.xml
<CustomField>
    <fullName>Position_pay_range__c</fullName>
    <label>Position pay range</label>
    <type>TextArea</type>
</CustomField>