force-app/main/default/objects/Open_Positions__c/fields/Position_pay_type__c.field-meta.xml
<CustomField>
    <fullName>Position_pay_type__c</fullName>
    <label>Position pay type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>