force-app/main/default/objects/Open_Positions__c/fields/Position_type__c.field-meta.xml
<CustomField>
    <fullName>Position_type__c</fullName>
    <label>Position type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time (30 hours)</fullName>
            </value>
            <value>
                <fullName>Part-time (25 hours)</fullName>
            </value>
            <value>
                <fullName>Part-time (20 hours)</fullName>
            </value>
            <value>
                <fullName>Part-time (less than 20)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>