force-app/main/default/objects/Open_Positions__c/fields/Total_number_of_applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_applicants__c</fullName>
    <label>Total number of applicants</label>
    <summaryForeignKey>Applicant_Tracking__c.Position_Applied_for__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>